Attempt to fix buttons not appearing on mobile but only on pc mobile mode

--- a/StyleCSS/style-menu.css
+++ b/StyleCSS/style-menu.css
@@ -539,7 +539,7 @@ body.showCart .container-all{
     /* Cart window section */
     .cartTab{
         width: 100%;
-        height: 100vh;
+        height: 90vh;
         grid-template-rows: 70px 1fr 70px;
         inset: 0 -400px 0 auto;
     }
